# cmake_bullet_example

./: .gitignore  CMakeLists.txt  CMakeLists_docker.txt  CMakeLists_macos.txt  CMakeLists_raspi.txt  README.md  build  docker-compose.yml  docker.sh  run  send  setup.sh
project/: debug_bodies.json  docker-compose.yml  docker.sh  inverse_kinematics.py  push_debug  run  scene
project/debug_bodies/: debug_bodies.json  temp.json
project/html/: index.html  physics.js
project/src/: hello.cpp  python_pika_write.py
src/: hello.cpp  python_pika_listen.py  python_pika_write.py
